--- a/vercel.json
+++ b/vercel.json
@@ -1,82 +1,36 @@
 {
   "rewrites": [
     {
-      "source": "/doraemon.m3u8",
-      "destination": "/api/proxy?url=https://cloudfrontnet.vercel.app/tplay/playout/209902/master.m3u8"
+      "source": "/doraemon/:path*",
+      "destination": "https://cloudfrontnet.vercel.app/tplay/playout/209902/:path*"
     },
     {
-      "source": "/doraemon/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209902/:segment*"
-    },
-
-
-    {
-      "source": "/sonyaath.m3u8",
-      "destination": "/api/proxy?url=https://cloudfrontnet.vercel.app/tplay/playout/209611/master.m3u8"
+      "source": "/sonyaath/:path*",
+      "destination": "https://cloudfrontnet.vercel.app/tplay/playout/209611/:path*"
     },
     {
-      "source": "/sonyaath/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209611/:segment*"
-    },
-
-
-    {
-      "source": "/kolkatamovies.m3u8",
-      "destination": "/api/proxy?url=https://cloudfrontnet.vercel.app/tplay/playout/209627/master.m3u8"
+      "source": "/kolkatamovies/:path*",
+      "destination": "https://cloudfrontnet.vercel.app/tplay/playout/209627/:path*"
     },
     {
-      "source": "/kolkatamovies/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209627/:segment*"
-    },
-
-
-    {
-      "source": "/bollywood1.m3u8",
-      "destination": "/api/proxy?url=https://cloudfrontnet.vercel.app/tplay/playout/209612/master.m3u8"
+      "source": "/bollywood1/:path*",
+      "destination": "https://cloudfrontnet.vercel.app/tplay/playout/209612/:path*"
     },
     {
-      "source": "/bollywood1/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209612/:segment*"
-    },
-
-
-    {
-      "source": "/bollywood2.m3u8",
-      "destination": "/api/proxy?url=https://cloudfrontnet.vercel.app/tplay/playout/209593/master.m3u8"
+      "source": "/bollywood2/:path*",
+      "destination": "https://cloudfrontnet.vercel.app/tplay/playout/209593/:path*"
     },
     {
-      "source": "/bollywood2/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209593/:segment*"
-    },
-
-
-    {
-      "source": "/jiocinema.m3u8",
-      "destination": "/api/proxy?url=https://cloudfrontnet.vercel.app/tplay/playout/209622/master.m3u8"
+      "source": "/jiocinema/:path*",
+      "destination": "https://cloudfrontnet.vercel.app/tplay/playout/209622/:path*"
     },
     {
-      "source": "/jiocinema/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209622/:segment*"
-    },
-
-
-    {
-      "source": "/cartoons.m3u8",
-      "destination": "/api/proxy?url=https://cloudfrontnet.vercel.app/tplay/playout/209901/master.m3u8"
+      "source": "/cartoons/:path*",
+      "destination": "https://cloudfrontnet.vercel.app/tplay/playout/209901/:path*"
     },
     {
-      "source": "/cartoons/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209901/:segment*"
-    },
-
-
-    {
-      "source": "/dorymon.m3u8",
-      "destination": "/api/proxy?url=https://cloudfrontnet.vercel.app/tplay/playout/209902/master.m3u8"
-    },
-    {
-      "source": "/dorymon/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209902/:segment*"
+      "source": "/dorymon/:path*",
+      "destination": "https://cloudfrontnet.vercel.app/tplay/playout/209902/:path*"
     }
   ]
 }
