--- a/vercel.json
+++ b/vercel.json
@@ -1,75 +1,11 @@
 {
+  "version": 2,
   "rewrites": [
     {
-      "source": "/doraemon.m3u8",
-      "destination": "/api/proxy?url=/tplay/playout/209902/master.m3u8"
-    },
-    {
-      "source": "/doraemon/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209902/:segment*"
-    },
-
-    {
-      "source": "/sonyaath.m3u8",
-      "destination": "/api/proxy?url=/tplay/playout/209611/master.m3u8"
-    },
-    {
-      "source": "/sonyaath/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209611/:segment*"
-    },
-
-    {
-      "source": "/kolkatamovies.m3u8",
-      "destination": "/api/proxy?url=/tplay/playout/209627/master.m3u8"
-    },
-    {
-      "source": "/kolkatamovies/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209627/:segment*"
-    },
-
-    {
-      "source": "/bollywood1.m3u8",
-      "destination": "/api/proxy?url=/tplay/playout/209612/master.m3u8"
-    },
-    {
-      "source": "/bollywood1/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209612/:segment*"
-    },
-
-    {
-      "source": "/bollywood2.m3u8",
-      "destination": "/api/proxy?url=/tplay/playout/209593/master.m3u8"
-    },
-    {
-      "source": "/bollywood2/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209593/:segment*"
-    },
-
-    {
-      "source": "/jiocinema.m3u8",
-      "destination": "/api/proxy?url=/tplay/playout/209622/master.m3u8"
-    },
-    {
-      "source": "/jiocinema/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209622/:segment*"
-    },
-
-    {
-      "source": "/cartoons.m3u8",
-      "destination": "/api/proxy?url=/tplay/playout/209901/master.m3u8"
-    },
-    {
-      "source": "/cartoons/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209901/:segment*"
-    },
-
-    {
-      "source": "/dorymon.m3u8",
-      "destination": "/api/proxy?url=/tplay/playout/209902/master.m3u8"
-    },
-    {
-      "source": "/dorymon/:segment*",
-      "destination": "/api/proxy?segment=/tplay/playout/209902/:segment*"
+      "source": "/live/:id",
+      "destination": "/api/stream?id=:id"
     }
   ]
 }
+
+
