--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "rewrites": [
     {
-      "source": "/live/:id",
+      "source": "/live/:id.m3u8",
       "destination": "/api/stream?id=:id"
     }
   ]
